# TriipMiles-Dfinity

./: .babelrc  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  README.md  build.sh  demo.sh  dfx.json  package-lock.json  package-set.dhall  package.json  tsconfig.json  vessel.dhall  webpack.config.js
actor_hello/: dfx.json  package-lock.json  package.json
actor_hello/src/actor_hello/: main.mo
calc/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
calc/.dfx/local/: canister_ids.json
calc/src/calc/: calc_main.mo  main.mo
counter/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
factorial/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
hello/: package-lock.json  package.json
location_hello/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
multiple_actors/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
my_counter/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
phonebook/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
pub_sub/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
src/triip/: State.mo  Types.mo  luckyWheel.mo  main.mo
src/triip_ar/: index.html  index.js
src/triip_icp/: main.mo
src/triip_models/: State.mo  Types.mo  main.mo
src/triip_rust/: Cargo.toml
src/triip_rust/src/: lib.rs  triip_rust.did
src/triip_token/: token.mo  types.mo
whoami/: README.md  dfx.json  package-lock.json  package.json  webpack.config.js
(+487 files in other folders)
