[package]
name = "triip_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.triip_rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.4.0"
ic-types = "0.3.0"
ic-cdk-macros = "0.4.0"
serde = "1.0.136"
serde_derive = "1.0.136"
reqwest = { version = "0.11.9", features = ["json"] }